# circletest

./: .clang-format  CMakeLists.txt  README.md
.circleci/: config.yml
CMakeModules/: Findglfw3.cmake  Macros.cmake
include/circle/: circle.h
src/: CMakeLists.txt
src/circle/: CMakeLists.txt  circle.cpp
test/: CMakeLists.txt
test/circletest/: CMakeLists.txt  circle_test.cpp  circle_test.js  index.html
